--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,18 @@
 					</div>
 				</nav>
 			</header>
-			<nav v-show="nav.open === true" class="nav--left">
-				<div class="nav-open">
-					<i @click="closeNav()" >X</i>
-					<ul>
-						<li>category 1</li>
-						<li>category 2</li>
-						<li>category 3</li>
-					</ul>
-				</div>
-			</nav>
+			<transition name="slide-fade">
+				<nav v-show="nav.open === true" class="nav--left">
+					<div class="nav-open">
+						<i @click="closeNav()" >X</i>
+						<ul>
+							<li>category 1</li>
+							<li>category 2</li>
+							<li>category 3</li>
+						</ul>
+					</div>
+				</nav>
+			</transition>
 			<div @click="openNav()" class="nav-closed">
 				<p v-text="nav.content"></p>
 			</div>
@@ -66,34 +68,36 @@
 			</main>
 
 			<div class="cart">
+
 				<div v-show="cart.open === false" class="cart--closed" @click="openCart()">
 					<h4>Cart</h4><i></i>
 				</div>
-				<div v-show="cart.open === true" class="cart--open">
-					<button @click="closeCart()" type="button" name="button"> close cart</button>
+					<transition name="fade">
+						<div v-show="cart.open === true" class="cart--open">
+							<button @click="closeCart()" type="button" name="button"> close cart</button>
 
-					<ul class="">
-						<h3>Cart</h3>
-						<div v-if="order.length === 0"class="cart-empty">
-								{{ cart.empty }}
+							<ul class="">
+								<h3>Cart</h3>
+								<div v-if="order.length === 0"class="cart-empty">
+										{{ cart.empty }}
+								</div>
+								<li class="box-shadow margin-bottom" v-for="item in order">
+									<img :src="item.img" alt=" product image">
+									<h4>{{ item.name }}</h4>
+									<p>{{ item.description }}</p>
+									<p class="highlighted">${{ item.price }}</p>
+									<button @click="removeItem(item)" class="btn--cart" type="button" name="button">Remove Item</button>
+								</li>
+							</ul>
+							<button v-if="order.length > 0" class="btn--cart" @click="checkbox = !checkbox" type="button" name="button">EMPTY CART</button>
+
+							<modal @click-out="checkbox = !checkbox" :visible="checkbox">
+								<div class="warning">!</div>
+								<button @click="emptyCart()" class="btn--cart" type="button" name="button">Remove all items from cart?</button>
+							</modal>
 						</div>
-						<li class="box-shadow margin-bottom" v-for="item in order">
-							<img :src="item.img" alt=" product image">
-							<h4>{{ item.name }}</h4>
-							<p>{{ item.description }}</p>
-							<p class="highlighted">${{ item.price }}</p>
-							<button @click="removeItem(item)" class="btn--cart" type="button" name="button">Remove Item</button>
-						</li>
-					</ul>
-					<button v-if="order.length > 0" class="btn--cart" @click="emptyCart()" type="button" name="button">EMPTY CART</button>
-					<p v-if="order.length > 0"><checkbox v-model="checkbox">Empty Cart?</checkbox>Empty Cart?</p>
+					</transition>
 
-					<modal @click-out="checkbox = !checkbox" :visible="checkbox">
-						<div class="warning">!</div>
-						<p><checkbox @click="emptyCart()" v-model="checkbox"></checkbox></p>
-						<button class="btn--cart" type="button" name="button">Remove all items from cart?</button>
-					</modal>
-				</div>
 			</div>
 
 		</div>
