--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
 
 			<div class="cart">
 
-				<div v-show="cart.open === false" class="cart--closed" @click="openCart()">
+				<div class="cart--closed" @click="openCart()">
 					<h4>Cart</h4><i></i>
 				</div>
 					<transition name="fade">
